--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Tomography Challenge
+title: TomoChallenge
 # email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Tomography challenge website.
